--- a/About.htm
+++ b/About.htm
@@ -11,7 +11,7 @@
           <a href="main_page.htm">
   <img src="images/image1.jpg" align="left" width="40px" height="40px">&nbsp;
   </a>
-    <font face="Cursive" size="5px" color="seagreen">Click the prenset to go back</font>
+    <font face="Cursive" size="5px" color="seagreen">Click the present to go back</font>
         </td>
       </tr>
       <tr>
